--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-start">
           <div class="col-lg-16">
-            <a href="index.html"><h1>Солитонная модель Материи</h1></a>
-            <a href="index.html"><h2>Единая теория полей, частиц и взаимодействий</h2></a>
-            <a href="index.html"><h3>Исправленная и дополненная теоретическая физика</h3></a>
+            <a href="."><h1>Солитонная модель Материи</h1></a>
+            <a href="."><h2>Единая теория полей, частиц и взаимодействий</h2></a>
+            <a href="."><h3>Исправленная и дополненная теоретическая физика</h3></a>
           </div>
         </div>
       </div>
