--- a/index.html
+++ b/index.html
@@ -211,6 +211,21 @@
       </div>
 	</section>
 
+    <section class="section">
+
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
+<a href="preface.html#text" class="read-more"><span>Изъяны теорфизики и способ их устранения</span><i class="bi bi-arrow-right"></i></a>
+          </div>
+
+        </div>
+      </div>
+
+    </section>
+
   </main>
 
   <footer id="footer" class="header position-relative dark-background">
