--- a/preface.html
+++ b/preface.html
@@ -77,21 +77,19 @@
           <div class="order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
 
               <ul>
-                <li><a href="chapter1.html#text">1. Абстрактно-формальная парадигма познания</a></li>
-                <li><a href="chapter2.html#text">2. Парадокс в теоретической физике</a></li>
-                <li><a href="chapter3.html#text">3. Обоснование наличия Предматерии</a></li>
-                <li><a href="chapter31.html#text">&nbsp;&nbsp;3.1. Обоснование наличия Предматерии</a></li>
-                <li><a href="chapter32.html#text">&nbsp;&nbsp;3.2. Солитонная модель Материи</a></li>
-                <li><a href="chapter321.html#text">&nbsp;&nbsp;&nbsp;&nbsp;3.2.1. Одиночные бегущие волны-импульсы</a></li>
-                <li><a href="chapter322.html#text">&nbsp;&nbsp;&nbsp;&nbsp;3.2.2. Сущность «массы» и «тяготения»</a></li>
-                <li><a href="chapter323.html#text">&nbsp;&nbsp;&nbsp;&nbsp;3.2.3. Сущность «заряда», «электрополя» и электромагнетизма»</a></li>
-                <li><a href="chapter324.html#text">&nbsp;&nbsp;&nbsp;&nbsp;3.2.4. Сущность «кварков» и барионов</a></li>
-                <li><a href="chapter4.html#text">4. Сущностная космология</a></li>
-                <li><a href="chapter5.html#text">5. Сущностно-детерминированная модель Материи</a></li>
-                <li><a href="chapter6.html#text">6. Научное и практическое использования открытия</a></li>
-                <li><a href="chapter61.html#text">&nbsp;&nbsp;6.1. Научная значимость открытия</a></li>
-                <li><a href="chapter62.html#text">&nbsp;&nbsp;6.2. Практическая значимость открытия</a></li>
-                <li><a href="chapter7.html#text">7. Методика верификации модели</a></li>
+                <li><a href="chapter1.html#text">Изъяны абстрактно-формальной парадигмы познания</a></li>
+                <li><a href="chapter2.html#text">Парадокс в теоретической физике</a></li>
+                <li><a href="chapter31.html#text">&nbsp;&nbsp;Обоснование наличия Предматерии</a></li>
+                <li><a href="chapter32.html#text">&nbsp;&nbsp;Солитонная модель Материи</a></li>
+                <li><a href="chapter321.html#text">&nbsp;&nbsp;&nbsp;&nbsp;«Фотоны» и «нейтрино» – одиночные волны-импульсы</a></li>
+                <li><a href="chapter322.html#text">&nbsp;&nbsp;&nbsp;&nbsp;Сущность «массы» и «тяготения».</a></li>
+                <li><a href="chapter323.html#text">&nbsp;&nbsp;&nbsp;&nbsp;Сущность «заряда», «электрополя» и электромагнетизма»</a></li>
+                <li><a href="chapter324.html#text">&nbsp;&nbsp;&nbsp;&nbsp;Сущность «кварков» и барионов</a></li>
+                <li><a href="chapter4.html#text">Сущностная космология</a></li>
+                <li><a href="chapter5.html#text">Сопоставление сущностных и абстрактных единиц измерения</a></li>
+                <li><a href="chapter61.html#text">&nbsp;&nbsp;Научная значимость открытия</a></li>
+                <li><a href="chapter62.html#text">&nbsp;&nbsp;Практическая значимость открытия</a></li>
+                <li><a href="chapter7.html#text">Методика верификации модели</a></li>
                 <li><a href="references.html#text">Список литературы</a></li>
               </ul>
           </div>
@@ -227,7 +225,7 @@
 
           <div class="order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
 <a href="index.html#list_of_discoveries" class="read-more"><i class="bi bi-arrow-left"></i> <span>Перечень гипотез и открытий</span></a>
-<a href="chapter1.html#text" class="read-more"><span>1. Абстрактно-формальная парадигма познания</span><i class="bi bi-arrow-right"></i></a>
+<a href="chapter1.html#text" class="read-more"><span>Изъяны абстрактно-формальной парадигмы познания</span><i class="bi bi-arrow-right"></i></a>
           </div>
 
         </div>
