Add chapters 6,7, references

--- a/references.html
+++ b/references.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Солитонная модель Материи. Единая теория полей, частиц и взаимодействий</title>
+  <title>Список литературы</title>
   <meta name="description" content="Веб-версия книги 'Солитонная модель Материи. Единая теория полей, частиц и взаимодействий. Исправленная и дополненная теоретическая физика' 2021 год">
   <meta name="keywords" content="единая теория, объединённая модель, модель Вселенной, что такое масса, что такое заряд, что такое кварк, что такое гравитация, связанные состояния, тёмная материя, солитонная модель материи, Тёмная энергия">
   <meta name="author" content="Выхованко Святослав Васильевич">
@@ -75,93 +75,16 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-start">
           <div class="col-lg-16">
-            <a href="."><h1>Солитонная модель Материи</h1></a>
-            <a href="."><h2>Единая теория полей, частиц и взаимодействий</h2></a>
-            <a href="."><h3>Исправленная и дополненная теоретическая физика</h3></a>
+            <a href="index.html"><h1>Солитонная модель Материи</h1></a>
+            <a href="index.html"><h2>Единая теория полей, частиц и взаимодействий</h2></a>
+            <a href="index.html"><h3>Исправленная и дополненная теоретическая физика</h3></a>
           </div>
         </div>
       </div>
 
     </section>
 
-    <section id="list_of_discoveries" class="section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h3>Веб-версия книги "Солитонная модель Материи. Единая теория полей, частиц и взаимодействий. Исправленная и дополненная теоретическая физика" 2021 год</h3>
-      </div><!-- End Section Title -->
-
-      <div class="container">
-
-        <div class="row gy-4">
-
-          <div class="order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
-<p style="font-size:19px">
-В книге доказано, что для построения всеобъемлющей и непротиворечивой модели Мироздания, описывающей все процессы и явления окружающей действительности, НЕОБХОДИМО и ДОСТАТОЧНО всего двух сущностных явлений: ПРЕДМАТЕРИИ как задатчика и среды существования МАТЕРИИ в виде волн (бегущих - фотонов и нейтрино) и стоячих волн в виде солитонов тороидальной формы, взаимодействия между которыми порождают все проявления Материи как модули из солитонов – протоны, нейтроны, атомы и физические тела.
-</p>
-          </div>
-
-        </div>
-
-      </div>
-
-    </section>
-
-    <section id="shortcomings_of_theorphysics" class="section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <span>Перечень открытий</span>
-        <h2>Перечень открытий</h2>
-      </div><!-- End Section Title -->
-
-      <div class="container">
-
-        <div class="row gy-4">
-
-          <div class="order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
-<ul>
-<li><i class="bi bi-check-circle"></i>
-Доказано, что «вакуум физический» является неизвестной ранее сущностью - Предматерией, структурная организация и свойства элементов которой обеспечивают идентичность параметров частиц, полей и взаимодействий всего Мироздания.
-</li>
-<li><i class="bi bi-check-circle"></i>Доказано, что Материя является функциональным порождением структурной организации и параметров элементов Предматерии, описаны процессы порождения Материи в виде стоячих волн-солитонов и модулей из солитонов различной степени сложности: протонов, нейтронов, атомных ядер, атомов и физических тел.
-</li>
-<li><i class="bi bi-check-circle"></i>Показано, что элементами Предматерии могут быть энергетические частицы - солитоны с размером около 10-33м и спином, направление которого обуславливает преобладание образования «частиц» над «античастицами», а также нестабильность нейтронов.
-</li>
-<li><i class="bi bi-check-circle"></i>Обоснована сущность, условия и механизм образования в Предматерии одиночных бегущих поперечных волн - «фотонов» и продольных волн - «нейтрино».
-</li>
-<li><i class="bi bi-check-circle"></i>Обоснована сущность, условия и механизм образования «массы» и «тяготения».
-</li>
-<li><i class="bi bi-check-circle"></i>Обоснованы условия образования и функционирования в Предматерии частицеподобных уединенных волн-солитонов, а также их параметров.
-</li>
-<li><i class="bi bi-check-circle"></i>Обоснована сущность, условия и механизм образования «заряда», «электрополя» и «электромагнетизма».
-</li>
-<li><i class="bi bi-check-circle"></i>Обоснована сущность, механизм образования и функционирования «кварков» и барионов.
-</li>
-<li><i class="bi bi-check-circle"></i>Доказано, что сильные и слабые взаимодействия являются процессами образования и распада модулей из солитонов, показан механизм образования барионов из высокоэнергетических солитонов-«кварков».
-</li>
-<li><i class="bi bi-check-circle"></i>Доказано, что категория физики и философии «ВРЕМЯ» является всего лишь мерой длительности процессов и/или интервалов между процессами.
-</li>
-<li><i class="bi bi-check-circle"></i>Доказано, что гипотезы о «Большом взрыве» и «Расширении Вселенной» под воздействием «Тёмной энергии» являются ошибочными, так как противоречат логике: «Тёмная энергия» препятствовала бы собиранию Вселенной в «зародыш», якобы взорвавшийся при   «Большом взрыве».
-</li>
-<li><i class="bi bi-check-circle"></i>Показано, что «элементарные частицы» во всём их разнообразии являются солитонами различного уровня энергии в стабильных (электрон, позитрон, «кварки» протонов и нейтронов) и нестабильных состояниях («мюоны», «пионы», «резонансы» и т.п).
-</li>
-<li><i class="bi bi-check-circle"></i>Показано, что явление «Тёмная материя» является следствием взаимодействия Материи с Предматерией.
-</li>
-<li><i class="bi bi-check-circle"></i>Показано, что явление «Связанные состояния» («квантовая запутанность») является следствием взаимодействия (резонанса) совпадающих волновых характеристик частиц.
-</li>
-<li><i class="bi bi-check-circle"></i>Доказано, что явление «Красное космологическое смещение» является следствием потерь энергии фотонов при движении по элементам Предматерии, обладающих волновым сопротивлением.
-</li>
-</ul>
-          </div>
-
-        </div>
-
-      </div>
-
-    </section>
-
-<section id="table_of_contents" class="section">
+    <section id="table_of_contents" class="section">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <span>Оглавление</span>
@@ -180,7 +103,7 @@
                 <li><a href="chapter31.html#text">&nbsp;&nbsp;Обоснование наличия Предматерии</a></li>
                 <li><a href="chapter321.html#text">&nbsp;&nbsp;Солитонная модель Материи</a></li>
                 <li><a href="chapter321.html#text">&nbsp;&nbsp;&nbsp;&nbsp;«Фотоны» и «нейтрино» – одиночные волны-импульсы</a></li>
-                <li><a href="chapter322.html#text">&nbsp;&nbsp;&nbsp;&nbsp;Сущность «массы» и «тяготения».</a></li>
+                <li><a href="chapter322.html#text">&nbsp;&nbsp;&nbsp;&nbsp;Сущность «массы» и «тяготения»</a></li>
                 <li><a href="chapter323.html#text">&nbsp;&nbsp;&nbsp;&nbsp;Сущность «заряда», «электрополя» и электромагнетизма»</a></li>
                 <li><a href="chapter324.html#text">&nbsp;&nbsp;&nbsp;&nbsp;Сущность «кварков» и барионов</a></li>
                 <li><a href="chapter4.html#text">Сущностная космология</a></li>
@@ -197,6 +120,59 @@
       </div>
 	</section>
 
+    <section id="text" class="section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+         <span>Список литературы</span>
+         <h2>Список литературы</h2>
+      </div><!-- End Section Title -->
+
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
+
+<ol>
+<li>Эйнштейн А. Собрание научных трудов. Т. 1, 2. (М.: Наука, 1966). </li>
+<li>Фейнман Р. Нобелевская лекция. Пер. с англ. Наука, М., 1976. </li>
+<li>Дирак П.А. Пути физики. М.: Энергоиздат, 1983 </li>
+<li>Математическая физика. Энциклопедия. Фаддеев Л.Д. (Ред.) 1998. 692 с.</li>
+<li>Ландау Л.Д., Лившиц Е.М. Теоретическая физика. т.1-т.10. М., Наука, 1988</li>
+<li>Планк М. Введение в теоретическую физику. Общая механика. Перевод с четвертого немецкого издания. Изд. 3. 2005. 200 с.</li>
+<li>Грин Б. Элегантная Вселенная. Суперструны, скрытые размерности и поиски окончательной теории. 2004. 288 с.</li>
+<li>Вайнберг С. Мечты об окончательной теории: Физика в поисках самых фундаментальных законов природы. Перевод с английского. 2004. 256 с. </li>
+<li>Вайнберг С. Квантовая теория поля. Общая теория. Т. 1. Т. 2. 2003. </li>
+<li> Физическая энциклопедия. Т. 1-5. Прохоров А.М. (Ред.) 1998.</li>
+<li>Хокинг С., Пенроуз Р. Природа пространства и времени. 2000. 160 с</li>
+<li>Паули В. Теория относительности: Пер. с нем. Изд.3, испр. 1991. 328 с</li>
+<li>Гейзенберг В. Избранные труды. Серия "Классики науки". 2001. 616 с.</li>
+<li>Вайнберг С. Гравитация и космология. Принципы и приложения общей теории относительности. 2000. 696 с</li>
+<li>Шредингер Э. Пространственно-временная структура Вселенной. Книга 1: "Структура пространства- времени". Книга 2: "Расширяющиеся вселенные". 2000. 224 с</li>
+<li>Плохотников К.Э. Математическое моделирование и вычислительный эксперимент. Методология и практика. 2003. 280 с</li>
+<li>Бьеркнес. Пульсационная теория тяготения. 1856. В кн. Н.Т. Роузвер. Перигелий Меркурия от Леверье до Эйнштейна. Пер. с англ., Мир, М., 1985, стр.125.</li>
+<li>Димитриенко Ю. И. Нелинейная механика сплошной среды. М.: Физматлит, 2010, 624 с.</li>
+<li>Коренев Г.В. Тензорное исчисление. — М.: Издательство МФТИ, 2000. — 240 с. — ISBN 5-89155-047-4.</li>
+<li>В. И. Зиненко, Б. П. Сорокин, П. П. Турчин. Основы физики твердого тела. — М.: Издательство Физико-математической литературы, 2001. — 336 с. — ISBN 5-94052-040-5.</li>
+<li>Браун, О. М. Модель Френкеля — Конторовой. Концепции, методы, приложения. — М.: Физматлит, 2008. — 536 с.</li>
+<li>Бунге Марио. Философия физики. М, Прогресс, 1975г.</li>
+<li>Матвеев А.Н. Механика и теория относительности. 3-е изд. / А.Н. Матвеев. – М.: ОНИКС 21 век: Мир и Образование, 2003. — 432 с.</li>
+<li>Иродов И.Е. Курс общей физики. В 5 т. Т. 1 Механика. Основные законы / И.Е. Иродов. – М.: 2010. — 309 с.</li>
+<li>Сивухин Д.В. Общий курс физики. В 5 т. Т. 1 Механика / Д.В. Сивухин. – М.: ФИЗМАТЛИТ; Изд-во МФТИ, 2005. – 560 с.</li>
+<li>Трофимов Т.И. Курс физики. 11-е изд. / Т.И. Трофимов. – М.: 2006.— 560 с.</li>
+<li>Детлаф А.А., Яворский Б.М. Курс физики / А.А. Детлаф., Б.М. Яворский. – М.: Высш. шк. , 2002. – 718 с.</li>
+<li>Ландсберг Г.С.Элементарный учебник физики. В 3 т. Т.1 Механика. Теплота. Молекулярная физика / Г.С. Ландсберг. – Том 1: 2010 – 612с.</li>
+<li>Выхованко С.В. Сущность и структурно-функциональная организация Материи и её проявлений в виде деформационных и волновых процессов ("частиц", "полей" и "взаимодействий"). Волгоград, Принтерра, 2007 – 76 с.</li>
+</ol>
+
+          </div>
+
+        </div>
+      </div>
+
+    </section>
+
     <section class="section">
 
       <div class="container">
@@ -204,7 +180,8 @@
         <div class="row gy-4">
 
           <div class="order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
-<a href="preface.html#text" class="read-more"><span>Изъяны теорфизики и способ их устранения</span><i class="bi bi-arrow-right"></i></a>
+<a href="chapter7.html#text" class="read-more"><i class="bi bi-arrow-left"></i> <span>Методика верификации модели</span></a>
+<a href="download.html#text" class="read-more"><span>Скачать книгу</span><i class="bi bi-arrow-right"></i></a>
           </div>
 
         </div>
@@ -222,6 +199,7 @@
         Выхованко Святослав Васильевич
       </div>
 	  <div><a href=".">единая теория</a>, <a href=".">объединённая модель</a>, <a href=".">модель Вселенной</a>, <a href="chapter322.html#text">что такое масса</a>, <a href="chapter323.html#text">что такое заряд</a>, <a href="chapter324.html#text">что такое кварк</a>, <a href=".">что такое гравитация</a>, <a href=".">связанные состояния</a>, <a href=".">тёмная материя</a>, <a href=".">солитонная модель материи</a></div>
+    </div>
     </div>
 
   </footer>
