--- a/preface.html
+++ b/preface.html
@@ -37,9 +37,10 @@
   <div class="container position-relative d-flex align-items-center justify-content-between">
 	<nav id="navmenu" class="navmenu">
 	  <ul>
-	  <li><span class="bi bi-envelope d-flex align-items-center"><a href="mailto:soliton_theory_of_matters@mail.ru">soliton_theory_of_matters@mail.ru</a></span></li>
+	  <li><a class="nofocus" href="mailto:soliton_theory_of_matters@mail.ru"><span class="bi bi-envelope d-flex align-items-center"></span></a></li>
 		<li><a href=".#list_of_discoveries">Перечень гипотез и открытий</a></li>
 		<li><a href="preface.html#text">Изъяны теорфизики и способ их устранения</a></li>
+		<li><a href="download.html#text">Скачать книгу</a></li>
 		<li class="dropdown"><a href="#table_of_contents"><span>Оглавление</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
 		  <ul>
 			<li><a href="chapter1.html#text">Изъяны абстрактно-формальной парадигмы познания</a></li>
@@ -47,7 +48,7 @@
 			<li><a href="chapter31.html#text">&nbsp;&nbsp;Обоснование наличия Предматерии</a></li>
 			<li><a href="chapter321.html#text">&nbsp;&nbsp;Солитонная модель Материи</a></li>
 			<li><a href="chapter321.html#text">&nbsp;&nbsp;&nbsp;&nbsp;«Фотоны» и «нейтрино» – одиночные волны-импульсы</a></li>
-			<li><a href="chapter322.html#text">&nbsp;&nbsp;&nbsp;&nbsp;Сущность «массы» и «тяготения».</a></li>
+			<li><a href="chapter322.html#text">&nbsp;&nbsp;&nbsp;&nbsp;Сущность «массы» и «тяготения»</a></li>
 			<li><a href="chapter323.html#text">&nbsp;&nbsp;&nbsp;&nbsp;Сущность «заряда», «электрополя» и электромагнетизма»</a></li>
 			<li><a href="chapter324.html#text">&nbsp;&nbsp;&nbsp;&nbsp;Сущность «кварков» и барионов</a></li>
 			<li><a href="chapter4.html#text">Сущностная космология</a></li>
@@ -58,7 +59,6 @@
 			<li><a href="references.html#text">Список литературы</a></li>
 		  </ul>
 		</li>
-		<li><a class="download" href="download.html#text">Скачать книгу</a></li>
 	  </ul>
 	  <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
 	</nav>
