--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">2024</strong> <span>Права защищены</span></p>
       <div class="credits">
-        Выхованко Святослав Васильевич
+        Выхованко Святослав Васильевич!
       </div>
 	  <div><a href=".">единая теория</a>, <a href=".">объединённая модель</a>, <a href=".">модель Вселенной</a>, <a href="chapter322.html#text">что такое масса</a>, <a href="chapter323.html#text">что такое заряд</a>, <a href="chapter324.html#text">что такое кварк</a>, <a href=".">что такое гравитация</a>, <a href=".">связанные состояния</a>, <a href=".">тёмная материя</a>, <a href=".">солитонная модель материи</a></div>
     </div>
