--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Солитонная модель Материи. Единая теория полей, частиц и взаимодействий</title>
+  <title>!!!Солитонная модель Материи. Единая теория полей, частиц и взаимодействий</title>
   <meta name="description" content="Веб-версия книги 'Солитонная модель Материи. Единая теория полей, частиц и взаимодействий. Исправленная и дополненная теоретическая физика' 2021 год">
   <meta name="keywords" content="единая теория, объединённая модель, модель Вселенной, что такое масса, что такое заряд, что такое кварк, что такое гравитация, связанные состояния, тёмная материя, солитонная модель материи, Тёмная энергия">
   <meta name="author" content="Выхованко Святослав Васильевич">
