--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>!!!Солитонная модель Материи. Единая теория полей, частиц и взаимодействий</title>
+  <title>Солитонная модель Материи. Единая теория полей, частиц и взаимодействий</title>
   <meta name="description" content="Веб-версия книги 'Солитонная модель Материи. Единая теория полей, частиц и взаимодействий. Исправленная и дополненная теоретическая физика' 2021 год">
   <meta name="keywords" content="единая теория, объединённая модель, модель Вселенной, что такое масса, что такое заряд, что такое кварк, что такое гравитация, связанные состояния, тёмная материя, солитонная модель материи, Тёмная энергия">
   <meta name="author" content="Выхованко Святослав Васильевич">
@@ -219,7 +219,7 @@
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">2024</strong> <span>Права защищены</span></p>
       <div class="credits">
-        Выхованко Святослав Васильевич!
+        Выхованко Святослав Васильевич
       </div>
 	  <div><a href=".">единая теория</a>, <a href=".">объединённая модель</a>, <a href=".">модель Вселенной</a>, <a href="chapter322.html#text">что такое масса</a>, <a href="chapter323.html#text">что такое заряд</a>, <a href="chapter324.html#text">что такое кварк</a>, <a href=".">что такое гравитация</a>, <a href=".">связанные состояния</a>, <a href=".">тёмная материя</a>, <a href=".">солитонная модель материи</a></div>
     </div>
