--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 </li>
 <li><i class="bi bi-check-circle"></i>Доказано, что Материя является функциональным порождением структурной организации и параметров элементов Предматерии, описаны процессы порождения Материи в виде стоячих волн-солитонов и модулей из солитонов различной степени сложности: протонов, нейтронов, атомных ядер, атомов и физических тел.
 </li>
-<li><i class="bi bi-check-circle"></i>Показано, что элементами Предматерии могут быть энергетические частицы - солитоны с размером около 10-33м и спином, направление которого обуславливает преобладание образования «частиц» над «античастицами», а также нестабильность нейтронов.
+<li><i class="bi bi-check-circle"></i>Показано, что элементами Предматерии могут быть энергетические частицы - солитоны с размером около 10<sup>-33</sup>м и спином, направление которого обуславливает преобладание образования «частиц» над «античастицами», а также нестабильность нейтронов.
 </li>
 <li><i class="bi bi-check-circle"></i>Обоснована сущность, условия и механизм образования в Предматерии одиночных бегущих поперечных волн - «фотонов» и продольных волн - «нейтрино».
 </li>
