--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       </div>
 	  <div><a href=".">единая теория</a>, <a href=".">объединённая модель</a>, <a href=".">модель Вселенной</a>, <a href="chapter322.html#text">что такое масса</a>, <a href="chapter323.html#text">что такое заряд</a>, <a href="chapter324.html#text">что такое кварк</a>, <a href=".">что такое гравитация</a>, <a href=".">связанные состояния</a>, <a href=".">тёмная материя</a>, <a href=".">солитонная модель материи</a></div>
     </div>
-
+    <img src="http://www.reliablecounter.com/count.php?page=soliton.theoryofmatters.ru/&digit=style/plain/15/&reloads=0" border="0">
   </footer>
 
   <!-- Scroll Top -->
