--- a/index.html
+++ b/index.html
@@ -222,8 +222,24 @@
         Выхованко Святослав Васильевич
       </div>
 	  <div><a href=".">единая теория</a>, <a href=".">объединённая модель</a>, <a href=".">модель Вселенной</a>, <a href="chapter322.html#text">что такое масса</a>, <a href="chapter323.html#text">что такое заряд</a>, <a href="chapter324.html#text">что такое кварк</a>, <a href=".">что такое гравитация</a>, <a href=".">связанные состояния</a>, <a href=".">тёмная материя</a>, <a href=".">солитонная модель материи</a></div>
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();
+   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(98547063, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/98547063" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+	    
     </div>
-    <img src="http://www.reliablecounter.com/count.php?page=soliton.theoryofmatters.ru/&digit=style/plain/15/&reloads=0" border="0">
   </footer>
 
   <!-- Scroll Top -->
