--- a/index.html
+++ b/index.html
@@ -222,11 +222,18 @@
         Выхованко Святослав Васильевич
       </div>
 	  <div><a href=".">единая теория</a>, <a href=".">объединённая модель</a>, <a href=".">модель Вселенной</a>, <a href="chapter322.html#text">что такое масса</a>, <a href="chapter323.html#text">что такое заряд</a>, <a href="chapter324.html#text">что такое кварк</a>, <a href=".">что такое гравитация</a>, <a href=".">связанные состояния</a>, <a href=".">тёмная материя</a>, <a href=".">солитонная модель материи</a>
+
 <br/>
-<!-- Yandex.Metrika informer -->
-<img src="https://informer.yandex.ru/informer/98547063/3_1_FFFFFFFF_EFEFEFFF_0_uniques"
-style="width:88px; height:31px; border:0;" alt="Yandex.Metrica" title="Yandex.Metrica: data for today (page views, visits and unique users)" class="ym-advanced-informer" data-cid="98547063" data-lang="en" />
-<!-- /Yandex.Metrika informer -->
+<!--LiveInternet counter--><img id="licntBC2B" width="88" height="31" style="border:0" 
+title="LiveInternet: number of pageviews for 24 hours, of visitors for 24 hours and for today is shown"
+src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAIBTAA7"
+alt=""/><script>(function(d,s){d.getElementById("licntBC2B").src=
+"https://counter.yadro.ru/hit?t12.6;r"+escape(d.referrer)+
+((typeof(s)=="undefined")?"":";s"+s.width+"*"+s.height+"*"+
+(s.colorDepth?s.colorDepth:s.pixelDepth))+";u"+escape(d.URL)+
+";h"+escape(d.title.substring(0,150))+";"+Math.random()})
+(document,screen)</script><!--/LiveInternet-->
+
 </div>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
